@@ -4,6 +4,7 @@
 
 Version 1.1b to be released
 ---------------------------
+- Bug #611: When using relation name as table alias, it should be properly quoted to avoid name conflict (Qiang)
 - Bug #642: CPgsqlSchema::findTableNames() should not include view names in the result (Qiang)
 - Bug #652: Calling CFormElementCollection::remove() triggers a method-not-defined error (Qiang)
 - Bug: Using CFileValidator causes an error about accessing a method of a non-object (Qiang)
